Refactor: Initial port for neoforge 1.21.1